--- a/style.css
+++ b/style.css
@@ -1,17 +1,40 @@
+body {
+    background-color: #222224;
+}
+
+.middle {
+    display: flex;
+    flex-flow: column;
+    align-items: center;
+    justify-content: center;
+
+}
+
+.button {
+    height: 60px;
+    width: 150px;
+    color: beige;
+    background-color: #222224;
+    font-size: 20px;
+    font-weight: 700;
+    border: 3px beige;
+    border-radius: 3vw;
+    border-style:outset;
+    cursor: pointer;
+    margin: 25px;
+}
 
 #box {
     display: flex;
-    align-items: center;
+    justify-content: space-around;
     flex-wrap: wrap;
-    width: 156px;
-    height: 150px;
 }
 
 .square {
-    background: pink;
+    background: #202021;
     width: 25px;
     height: 25px;
     margin: 0px 4px;
-    border-style: solid;
-    border-color: maroon;
+    border: 3px solid black;
+    border-radius: 1vw;
 }
