Added mouseover color change

--- a/style.css
+++ b/style.css
@@ -7,7 +7,6 @@ body {
     flex-flow: column;
     align-items: center;
     justify-content: center;
-
 }
 
 .button {
@@ -37,4 +36,15 @@ body {
     margin: 0px 4px;
     border: 3px solid black;
     border-radius: 1vw;
+    cursor:crosshair;
+}
+
+.mouseover {
+    background: beige;
+    width: 25px;
+    height: 25px;
+    margin: 0px 4px;
+    border: 3px solid black;
+    border-radius: 1vw;
+    cursor: crosshair;
 }
